--- a/src/bootloader/stage2_old/makefile
+++ b/src/bootloader/stage2_old/makefile
@@ -3,7 +3,9 @@ ASM?= nasm
 SRC_DIR ?= src
 BUILD_DIR ?= build
 ASM_INCLUDES ?= $(SRC_DIR)/utils/asm/
-ASM_FLAGS ?= -f elf
+CFLAGS16 ?= -4 -d3 -s -wx -ms -zl -zq -za99
+CC16 ?= /usr/bin/watcom/binl64/wcc
+LD16 ?= /usr/bin/watcom/binl64/wlink
 
 SOURCES_C = $(wildcard *.c)
 SOURCES_ASM = $(wildcard *.asm)
@@ -23,7 +25,7 @@ $(BUILD_DIR)/stage2/c/%.obj: %.c always
 	$(CC16) $(CFLAGS16) -fo=$@ $<
 
 $(BUILD_DIR)/stage2/asm/%.obj: %.asm always
-	$(ASM) -I$(ASM_INCLUDES) $(ASM_FLAGS) -o $@ $<
+	$(ASM) -I$(ASM_INCLUDES) -f obj -o $@ $<
 
 always:
 	mkdir -p $(BUILD_DIR)/stage2/c/
