--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "stdio.h": "c",
     "stdarg.h": "c",
     "compare": "cpp",
-    "stdint.h": "c"
+    "stdint.h": "c",
+    "ctype.h": "c",
+    "fat.h": "c",
+    "memdefs.h": "c"
   }
 }
