--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,12 @@
     "stdint.h": "c",
     "ctype.h": "c",
     "fat.h": "c",
-    "memdefs.h": "c"
+    "memdefs.h": "c",
+    "ranges": "c",
+    "internet": "c",
+    "regex": "c",
+    "gdt.h": "c",
+    "binary.h": "c",
+    "idt.h": "c"
   }
 }
