ISR implementation complete, CPU Interrupts (i686 architecture) complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
     "regex": "c",
     "gdt.h": "c",
     "binary.h": "c",
-    "idt.h": "c"
+    "idt.h": "c",
+    "stdbool.h": "c",
+    "isr.h": "c"
   }
 }
