bug fix & kernel work (#4)
* bug fix

* Initial refactoring for kernel makefile and files

* Fixed makefile & Added GDT and IDT support.

* ISR implementation complete, CPU Interrupts (i686 architecture) complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,14 @@
     "stdint.h": "c",
     "ctype.h": "c",
     "fat.h": "c",
-    "memdefs.h": "c"
+    "memdefs.h": "c",
+    "ranges": "c",
+    "internet": "c",
+    "regex": "c",
+    "gdt.h": "c",
+    "binary.h": "c",
+    "idt.h": "c",
+    "stdbool.h": "c",
+    "isr.h": "c"
   }
 }
