IRQ and PIC drivers updated source code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,6 @@
 {
   "files.associations": {
-    "stdio.h": "c",
-    "stdarg.h": "c",
-    "compare": "cpp",
-    "stdint.h": "c",
-    "ctype.h": "c",
-    "fat.h": "c",
-    "memdefs.h": "c",
-    "ranges": "c",
-    "internet": "c",
-    "regex": "c",
-    "gdt.h": "c",
-    "binary.h": "c",
-    "idt.h": "c",
-    "stdbool.h": "c",
-    "isr.h": "c",
-    "pic.h": "c",
-    "io.h": "c",
-    "irq.h": "c",
-    "i8259.h": "c"
+    "i8259.h": "c",
+    "stdio.h": "c"
   }
 }
