--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "files.associations": {
     "i8259.h": "c",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "stdint.h": "c",
+    "disk.h": "c",
+    "x86.h": "c"
   }
 }
