Basic FAT long name support + initial elf support (#11)
* Basic FAT long name support + initial elf support

* Dropped VFAT support,

Added boot kernel from elf file instead of bin file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,18 @@
     "minmax.h": "c",
     "fat.h": "c",
     "memdefs.h": "c",
-    "io.h": "c"
+    "io.h": "c",
+    "random": "c",
+    "bitfield3.C": "cpp",
+    "nullptr1.C": "cpp",
+    "pr81194.C": "cpp",
+    "stdlib.h": "c",
+    "*.inc": "c",
+    "*.tcc": "c",
+    "buffer": "c",
+    "pr77550.C": "cpp",
+    "mbr.h": "c",
+    "elf.h": "c"
   },
   "python.analysis.autoImportCompletions": false,
   "python.analysis.typeCheckingMode": "standard"
