--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,29 @@
     "buffer": "c",
     "pr77550.C": "cpp",
     "mbr.h": "c",
-    "elf.h": "c"
+    "elf.h": "c",
+    "stdarg.h": "c",
+    "stdbool.h": "c",
+    "vfs.h": "c",
+    "string": "c",
+    "internet": "c",
+    "socket": "c",
+    "string_view": "c",
+    "array": "c",
+    "ranges": "c",
+    "span": "c",
+    "hash_map": "c",
+    "hash_set": "c",
+    "rope": "c",
+    "slist": "c",
+    "bitset": "c",
+    "utility": "c",
+    "valarray": "c",
+    "regex": "c",
+    "dynamic_bitset": "c",
+    "initializer_list": "c",
+    "vga_text.h": "c",
+    "*.x": "cpp"
   },
   "python.analysis.autoImportCompletions": false,
   "python.analysis.typeCheckingMode": "standard"
