Moved VGA Text file to C++ E9 Output to E9Device Define Print functions in C++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,9 @@
     "dynamic_bitset": "c",
     "initializer_list": "c",
     "vga_text.h": "c",
-    "*.x": "cpp"
+    "*.x": "cpp",
+    "limits": "cpp",
+    "chrono": "cpp"
   },
   "python.analysis.autoImportCompletions": false,
   "python.analysis.typeCheckingMode": "standard"
