--- a/src/bootloader/stage2/SConscript
+++ b/src/bootloader/stage2/SConscript
@@ -14,6 +14,7 @@ env.Append(
     ],
     CPPPATH = [
         env.Dir('.').srcnode(),
+        env['ROOTDIR'].Dir('src/libs').srcnode()
     ],
     ASFLAGS = [
         '-I', env.Dir('.').srcnode(),
@@ -28,6 +29,7 @@ objects = env.Object(sources)
 
 obj_crti = objects.pop(FindIndex(objects, lambda item: IsFileName(item, 'crti.o')))
 obj_crtn = objects.pop(FindIndex(objects, lambda item: IsFileName(item, 'crtn.o')))
+
 Import('libcore')
 
 static_libs = [libcore]
