--- a/src/libs/core/SConscript
+++ b/src/libs/core/SConscript
@@ -11,6 +11,7 @@ env = TARGET_ENVIRONMENT.Clone()
 env.Append(
     CPPPATH = [
         env.Dir('.').srcnode(),
+        env['ROOTDIR'].Dir('src/libs').srcnode()
     ],
     ASFLAGS = [ '-I', env.Dir('.').srcnode(), '-f', 'elf' ]
 )
